--- a/index.html
+++ b/index.html
@@ -5,9 +5,90 @@
 <title>Tetris with piece queue, cache, and cycling</title>
 <style>
   @keyframes pulse {
-    0% { opacity: 1; }
-    50% { opacity: 0.5; }
-    100% { opacity: 1; }
+    0% { transform: scale(1); filter: brightness(1); }
+    50% { transform: scale(1.02); filter: brightness(1.2); }
+    100% { transform: scale(1); filter: brightness(1); }
+  }
+
+  @keyframes gradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+
+  @keyframes glow {
+    0% { text-shadow: 0 0 5px rgba(255, 165, 0, 0.5); }
+    50% { text-shadow: 0 0 10px rgba(255, 165, 0, 0.8); }
+    100% { text-shadow: 0 0 5px rgba(255, 165, 0, 0.5); }
+  }
+
+  .progress-bar {
+    width: 200px;
+    height: 24px;
+    background: #222;
+    border: 2px solid #FFA500;
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+    margin: 10px auto;
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .progress-bar:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 15px rgba(255, 165, 0, 0.4);
+  }
+
+  .progress-bar .fill {
+    height: 100%;
+    background: linear-gradient(45deg, #FF4500, #FFA500, #FFD700);
+    background-size: 200% 200%;
+    animation: gradient 3s ease infinite;
+    transition: width 0.3s ease-out;
+    border-radius: 8px;
+  }
+
+  .progress-bar .text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    animation: glow 2s ease-in-out infinite;
+    text-align: center;
+    padding: 0;
+    left: 0;
+    right: 0;
+  }
+
+  #explosion-bar.ready .fill {
+    background: linear-gradient(45deg, #FF4500, #FFA500, #FFD700, #FF4500);
+    background-size: 200% 200%;
+    animation: gradient 2s ease infinite, pulse 1.5s infinite;
+    filter: brightness(1.2);
+  }
+
+  #explosion-bar.ready .text {
+    color: #FFD700;
+    font-size: 17px;
+    text-shadow: 0 0 5px rgba(255, 215, 0, 0.8);
+  }
+
+  #explosion-bar:not(.ready) .fill {
+    filter: brightness(0.8);
   }
 
   body {
@@ -205,13 +286,16 @@
     </div>
   </div>
   <canvas id="tetris" width="200" height="440" style="margin-bottom: 12px;"></canvas>
-  <div class="progress-bar" id="level-bar" style="margin-bottom: 12px;">
-    <div class="fill" style="width: 0%"></div>
-    <div class="text">
-      <span id="level-text">Level 1 - 0/5 lines</span>
+  <div style="width: 100%; text-align: center;">
+    <div class="progress-bar" id="level-bar" style="margin-bottom: 12px;">
+      <div class="fill" style="width: 0%"></div>
+      <div class="text">
+        <span id="level-text">Level 1 - 0/5 lines</span>
+      </div>
     </div>
   </div>
-  <div id="explosion-bar" class="progress-bar" style="cursor: pointer;" onclick="if(explosionAvailable) shootDownAndClearTop()" title="Clear 30 lines to activate explosion">
+  <div style="width: 100%; text-align: center;">
+    <div id="explosion-bar" class="progress-bar" style="cursor: pointer;" onclick="if(explosionAvailable) shootDownAndClearTop()" title="Clear 30 lines to activate explosion">
     <div class="fill" style="width: 0%"></div>
     <div class="text">
       <span id="lines-text">0/30 lines</span>
@@ -792,14 +876,18 @@
   let explosionAvailable = false;
 
   function updateExplosionBar() {
-    const progressBar = document.querySelector('#explosion-bar .fill');
+    const explosionBar = document.getElementById('explosion-bar');
+    const progressBar = explosionBar.querySelector('.fill');
     const progress = (totalLinesCleared / requiredLinesForExplosion) * 100;
     progressBar.style.width = progress + '%';
-    document.getElementById('lines-text').textContent = totalLinesCleared + '/30 lines';
+    document.getElementById('lines-text').textContent = 
+      totalLinesCleared >= requiredLinesForExplosion ? 
+      'READY! Press D!' : 
+      `${totalLinesCleared}/30 lines`;
     
     if (totalLinesCleared >= requiredLinesForExplosion && !explosionAvailable) {
       explosionAvailable = true;
-      progressBar.style.animation = 'pulse 1.5s infinite';
+      explosionBar.classList.add('ready');
     }
   }
 
@@ -1409,7 +1497,7 @@
     // Update level progress bar
     document.querySelector('#level-bar .fill').style.width = progress + '%';
     document.getElementById('level-text').textContent = 
-      `Level ${level} - ${score}/${currentConfig.scoreTarget} points`;
+      `Level ${level} - ${score}/${currentConfig.scoreTarget}`;
     
     // Update game info display
     document.getElementById('info').innerHTML = 
